[gd_scene load_steps=4 format=3 uid="uid://dlkxvimdlvha"]

[ext_resource type="Script" path="res://Scenes/GUI_UI/SelectPlayerGUI/select_playerScript.gd" id="1_tb0t5"]
[ext_resource type="FontFile" uid="uid://cdmfsji4q20u4" path="res://Fonts/ChillPixels-Maximal.otf" id="2_wsdlg"]
[ext_resource type="PackedScene" uid="uid://dygotfdixd1xq" path="res://Pointers/Pointer.tscn" id="3_tvwca"]

[node name="SelectPlayer" type="Node2D"]
script = ExtResource("1_tb0t5")

[node name="EscenaGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1149.0
offset_bottom = 646.0

[node name="MaxSeleccion" type="Button" parent="EscenaGUI"]
layout_mode = 0
offset_left = 410.0
offset_top = 217.0
offset_right = 729.0
offset_bottom = 271.0
theme_override_fonts/font = ExtResource("2_wsdlg")
text = "Max (Melee)"

[node name="iniciarElMundo" type="Button" parent="EscenaGUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.5
offset_top = -31.0
offset_right = 48.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_wsdlg")
text = "Ir al Mundo"

[node name="Volver al menu inicial" type="Button" parent="EscenaGUI"]
layout_mode = 0
offset_left = 1082.0
offset_top = 12.0
offset_right = 1139.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("2_wsdlg")
text = "Volver"

[node name="Aviso Seleccion" type="Label" parent="EscenaGUI"]
layout_mode = 0
offset_left = 402.0
offset_top = 17.0
offset_right = 741.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("2_wsdlg")
theme_override_font_sizes/font_size = 29
text = "Seleccione un personaje"

[node name="CustomPointer" parent="." instance=ExtResource("3_tvwca")]

[connection signal="button_down" from="EscenaGUI/MaxSeleccion" to="." method="_on_max_seleccion_button_down"]
[connection signal="button_down" from="EscenaGUI/iniciarElMundo" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="EscenaGUI/Volver al menu inicial" to="." method="_on_volver_al_menu_inicial_button_down"]
